--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,9 @@
 
 # Tests need to be added as executables first
-add_executable(test_vectors test_vectors.cpp)
+add_executable(test_vectors test_vectors.cpp ../src/vector_seq.cpp)
 
 # Tells where headers of target are to be foundclea
+#target_include_directories(test_vectors PUBLIC {CMAKE_CURRENT_SOURCE_DIR} )
 target_include_directories(test_vectors PUBLIC ../include)
 
 # Links test_vectors against library pnla
